// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MeetingHeader Component Basic Rendering should match snapshot without props 1`] = `
<View
  style={
    {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 12,
      "elevation": 2,
      "marginBottom": 16,
      "padding": 16,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.1,
      "shadowRadius": 4,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
        "marginBottom": 12,
      }
    }
  >
    <Ionicons
      color="#007AFF"
      name="calendar-outline"
      size={24}
    />
    <Text
      style={
        {
          "color": "#000000",
          "fontSize": 20,
          "fontWeight": "600",
        }
      }
    >
      Schedule Meeting
    </Text>
  </View>
</View>
`;

exports[`MeetingHeader Component Combined Display should match snapshot with both props 1`] = `
<View
  style={
    {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 12,
      "elevation": 2,
      "marginBottom": 16,
      "padding": 16,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.1,
      "shadowRadius": 4,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
        "marginBottom": 12,
      }
    }
  >
    <Ionicons
      color="#007AFF"
      name="calendar-outline"
      size={24}
    />
    <Text
      style={
        {
          "color": "#000000",
          "fontSize": 20,
          "fontWeight": "600",
        }
      }
    >
      Schedule Meeting
    </Text>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
        "marginBottom": 4,
      }
    }
  >
    <Ionicons
      color="#666666"
      name="person-outline"
      size={16}
    />
    <Text
      style={
        {
          "color": "#666666",
          "fontSize": 14,
        }
      }
    >
      With: 
      John
       
      Smith
    </Text>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
        "marginBottom": 4,
      }
    }
  >
    <Ionicons
      color="#666666"
      name="briefcase-outline"
      size={16}
    />
    <Text
      style={
        {
          "color": "#666666",
          "fontSize": 14,
        }
      }
    >
      Job: 
      Kitchen Renovation
    </Text>
  </View>
</View>
`;

exports[`MeetingHeader Component Contractor Display should match snapshot with contractor 1`] = `
<View
  style={
    {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 12,
      "elevation": 2,
      "marginBottom": 16,
      "padding": 16,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.1,
      "shadowRadius": 4,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
        "marginBottom": 12,
      }
    }
  >
    <Ionicons
      color="#007AFF"
      name="calendar-outline"
      size={24}
    />
    <Text
      style={
        {
          "color": "#000000",
          "fontSize": 20,
          "fontWeight": "600",
        }
      }
    >
      Schedule Meeting
    </Text>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
        "marginBottom": 4,
      }
    }
  >
    <Ionicons
      color="#666666"
      name="person-outline"
      size={16}
    />
    <Text
      style={
        {
          "color": "#666666",
          "fontSize": 14,
        }
      }
    >
      With: 
      John
       
      Smith
    </Text>
  </View>
</View>
`;

exports[`MeetingHeader Component Job Display should match snapshot with job 1`] = `
<View
  style={
    {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 12,
      "elevation": 2,
      "marginBottom": 16,
      "padding": 16,
      "shadowColor": "#000",
      "shadowOffset": {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.1,
      "shadowRadius": 4,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
        "marginBottom": 12,
      }
    }
  >
    <Ionicons
      color="#007AFF"
      name="calendar-outline"
      size={24}
    />
    <Text
      style={
        {
          "color": "#000000",
          "fontSize": 20,
          "fontWeight": "600",
        }
      }
    >
      Schedule Meeting
    </Text>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
        "marginBottom": 4,
      }
    }
  >
    <Ionicons
      color="#666666"
      name="briefcase-outline"
      size={16}
    />
    <Text
      style={
        {
          "color": "#666666",
          "fontSize": 14,
        }
      }
    >
      Job: 
      Kitchen Renovation
    </Text>
  </View>
</View>
`;
